--- a/wp-content/themes/smartadapt/style.css
+++ b/wp-content/themes/smartadapt/style.css
@@ -66,7 +66,7 @@ html {
 @import url(http://fonts.googleapis.com/css?family=Orbitron:700,900,500,400);
 
 body {
-	font: 400 1em/1.6 'Merriweather Sans', Verdana, Helvetica, sans-serif;
+	font: 400 1em/1.6 'Gotham-Book', Verdana, Helvetica, sans-serif;
 	text-rendering: optimizeLegibility;
 	color: #444;
 
@@ -103,12 +103,11 @@ h6 {
 
 a {
 	outline: none;
-	color: #6491A1;
+	color: #A10518;
 }
 
 a:hover {
-	color: #0f3647;
-	background:gold;
+	color: #555;
 }
 
 a:focus {
@@ -531,6 +530,9 @@ body {
 	font-size: 1.250em;
 	line-height: 0.9;
 }
+.toggle-button span:hover, #top-switches li a:hover, #top-switches li:hover {
+	background:red;	
+}
 
 .toggle-button.active-toggle {
 	background: #385A72;
@@ -947,7 +949,9 @@ blockquote p {
 
 .entry-title {
 	margin: 0 0 0.5em 0;
+	font-family:"Gotham-Book";
 }
+h2.entry-title { font-size:1.99em ; }
 
 .tags-article {
 	margin-bottom: 15px;
@@ -1615,5 +1619,5 @@ nav-menu
 	}
 }
 
-.top-bar ul>li a:not(.button) { font-family:"Gotham-Book", sans-serif;}
-.top-bar li.current_page_item a{ background:red; }
+.top-bar ul>li a:not(.button) { font-family:"Gotham-Book", sans-serif; border-left: solid 1px #000; box-shadow: inset -1px 0px #333; }
+.top-bar li.current_page_item a{ background:#A10518; box-shadow: inset 1px 1px #f00, inset 2px 2px #f00, inset -1px -1px #f00, inset -2px -2px #f00, inset 3px 3px #fff, inset 4px 4px #fff, inset -3px -3px #fff, inset -4px -4px #fff, inset 5px 5px #f00, inset 6px 6px #f00, inset -5px -5px #f00, inset -6px -6px #f00; }
