--- a/wp-content/themes/smartadapt/style.css
+++ b/wp-content/themes/smartadapt/style.css
@@ -450,7 +450,7 @@ body {
 
 .button {
 	width: auto;
-	background: #2ba6cb;
+	background: navy;
 	border: 1px solid #1e728c;
 	-webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.5) inset;
 	-moz-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.5) inset;
@@ -571,11 +571,11 @@ body {
 
 /*meta labels*/
 .meta-label {
-	color: #c2c1c1;
+	color: #888;
 }
 
 .meta-label a {
-	color: #c2c1c1;
+	color: #888;
 }
 
 .meta-publisher {
@@ -806,7 +806,7 @@ blockquote p {
 }
 
 .site-logo:hover {
-	background: #6491A1;
+	background: #004b8d;
 	color: #fff;
 	text-decoration: none;
 }
@@ -840,10 +840,8 @@ blockquote p {
 }
 
 #toggle-search form {
-
 	max-width: 40%;
 	margin: 15px auto 5px auto;
-
 }
 
 /*top switch*/
@@ -1028,7 +1026,7 @@ h2.entry-title { font-size:1.99em ; }
 }
 /*category label*/
 .category-line  a {
-	background: #6491A1;
+	background: #004b8d;
 	color: #fff;
 	padding: 2px 7px;
 	margin: 2px 2px;
@@ -1434,7 +1432,7 @@ nav-menu
 }
 
 .sidebar-footer h3 {
-	color: #D8D8D8;
+	color: #D8D8D8;font-family: "Gotham-Book";
 }
 
 .sidebar-footer .widget-post-title {
@@ -1620,4 +1618,6 @@ nav-menu
 }
 
 .top-bar ul>li a:not(.button) { font-family:"Gotham-Book", sans-serif; border-left: solid 1px #000; box-shadow: inset -1px 0px #333; }
-.top-bar li.current_page_item a{ background:#A10518; box-shadow: inset 1px 1px #f00, inset 2px 2px #f00, inset -1px -1px #f00, inset -2px -2px #f00, inset 3px 3px #fff, inset 4px 4px #fff, inset -3px -3px #fff, inset -4px -4px #fff, inset 5px 5px #f00, inset 6px 6px #f00, inset -5px -5px #f00, inset -6px -6px #f00; }
+.top-bar li.current_page_item a{  
+	background:#A10518;
+	}
