--- a/wp-content/themes/smartadapt/style.css
+++ b/wp-content/themes/smartadapt/style.css
@@ -73,7 +73,7 @@ body {
 }
 
 h1, h2, h3, h4, h5, h6 {
-	font: 600 3.188em/1.2 'Open Sans Condensed', sans-serif;
+	font: 600 3.188em/1.2 'Contrail One', sans-serif;
 	color: #404040;
 	margin: 0.55em 0;
 	line-height: 1em;
@@ -228,7 +228,7 @@ input[type="submit"] {
 }
 
 input[type="submit"]:hover {
-	background-color: #6491A1;
+	background-color: #004b8d;
 }
 
 /*tables*/
@@ -450,7 +450,7 @@ body {
 
 .button {
 	width: auto;
-	background: navy;
+	background: #004b8d;
 	border: 1px solid #1e728c;
 	-webkit-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.5) inset;
 	-moz-box-shadow: 0 1px 0 rgba(255, 255, 255, 0.5) inset;
@@ -476,7 +476,7 @@ body {
 .button:hover,
 .button:focus {
 	color: #fff;
-	background-color: #385A72;
+	background-color: #004b8d;
 }
 
 .button {
@@ -488,7 +488,7 @@ body {
 }
 
 .button:hover {
-	background-color: #385A72;
+	background-color: #004b8d;
 	text-decoration: none !important;
 }
 
@@ -531,11 +531,11 @@ body {
 	line-height: 0.9;
 }
 .toggle-button span:hover, #top-switches li a:hover, #top-switches li:hover {
-	background:red;	
+	background:#004b8d;	
 }
 
 .toggle-button.active-toggle {
-	background: #385A72;
+	background: #004b8d;
 	color: #fff;
 }
 
@@ -735,7 +735,7 @@ blockquote p {
 /*expand area - toggle switch*/
 .toggle-area {
 	display: none;
-	background: #385A72;
+	background: #004b8d;
 	min-height: 65px;
 }
 
@@ -793,22 +793,27 @@ blockquote p {
 	overflow: hidden;
 }
 
-.site-logo {
+.site-logo, .site-logo a {
 	width: 222px;
+	box-shadow: -2px 2px white, -4px 4px #A10518, -4px 4px white, -6px 6px #A10518;
 	height: 45px;
 	margin-left: -15px;
 	text-align: center;
-	font: 600 1.250em/2.2 'Gotham-Book', sans-serif;
+	font: 600 1.250em/2.2 'Contrail One', sans-serif;
+	text-transform: uppercase;
 	background-color: #A10518;
 	color: #fff;
+	text-shadow:   -1px -1px 0 #004b8d,      1px -1px 0 #004b8d,    -1px 1px 0 #004b8d,     1px 1px 0 #004b8d;
 	display: block;
 	overflow: hidden;
 }
 
 .site-logo:hover {
-	background: #004b8d;
 	color: #fff;
 	text-decoration: none;
+    -moz-transition:box-shadow 1s ease-in-out;
+    -webkit-transition:box-shadow 1s ease-in-out;
+    -o-transition:box-shadow 1s ease-in-out;
 }
 
 .site-logo img {
@@ -877,7 +882,7 @@ blockquote p {
 }
 
 .featured-post {
-	background: #385A72;
+	background: #004b8d;
 	width: 30%;
 	padding: 5px 10px;
 	color: #fff;
@@ -1115,7 +1120,7 @@ ul.pagination .current:hover, ul.pagination li .current {
 }
 
 .author-info h4 {
-	color: #385A72;
+	color: #004b8d;
 }
 
 .author-avatar {
@@ -1247,7 +1252,7 @@ nav-menu
 
 #sidebar .widget-title {
 	font-size: 1.250em;
-	background: #385A72;
+	background: #004b8d;
 	color: #fff;
 	padding: 5px 10px;
 	margin-right: -30px;
@@ -1620,4 +1625,5 @@ nav-menu
 .top-bar ul>li a:not(.button) { font-family:"Gotham-Book", sans-serif; border-left: solid 1px #000; box-shadow: inset -1px 0px #333; }
 .top-bar li.current_page_item a{  
 	background:#A10518;
+	box-shadow: inset -1px -1px white;
 	}
