--- a/wp-content/themes/smartadapt/style.css
+++ b/wp-content/themes/smartadapt/style.css
@@ -467,10 +467,6 @@ body {
 	position: relative;
 	text-align: center;
 	text-decoration: none;
-	-webkit-transition: background-color 0.15s ease-in-out;
-	-moz-transition: background-color 0.15s ease-in-out;
-	-o-transition: background-color 0.15s ease-in-out;
-	transition: background-color 0.15s ease-in-out;
 }
 
 .button:hover,
@@ -531,11 +527,11 @@ body {
 	line-height: 0.9;
 }
 .toggle-button span:hover, #top-switches li a:hover, #top-switches li:hover {
-	background:#004b8d;	
+	background:#333;	
 }
 
 .toggle-button.active-toggle {
-	background: #004b8d;
+	background: #333;
 	color: #fff;
 }
 
@@ -684,11 +680,10 @@ blockquote p {
 	margin-top: 6px;
 }
 
-/*left navigation mobile*/
+/*left navigation mobile*/	
 
 #mobile-navigation {
 	margin: 20px 0px 40px;
-
 }
 
 #mobile-navigation select, #mobile-navigation option {
@@ -735,7 +730,7 @@ blockquote p {
 /*expand area - toggle switch*/
 .toggle-area {
 	display: none;
-	background: #004b8d;
+	background: #333;
 	min-height: 65px;
 }
 
@@ -795,15 +790,15 @@ blockquote p {
 
 .site-logo, .site-logo a {
 	width: 222px;
-	box-shadow: -2px 2px white, -4px 4px #A10518, -4px 4px white, -6px 6px #A10518;
 	height: 45px;
 	margin-left: -15px;
 	text-align: center;
 	font: 600 1.250em/2.2 'Contrail One', sans-serif;
 	text-transform: uppercase;
-	background-color: #A10518;
+	background-color: #333;
 	color: #fff;
-	text-shadow:   -1px -1px 0 #004b8d,      1px -1px 0 #004b8d,    -1px 1px 0 #004b8d,     1px 1px 0 #004b8d;
+/*	box-shadow:inset 0 0 10px #111;
+*/	text-shadow:   -1px -1px 0 #555,      1px -1px 0 #555,    -1px 1px 0 #555,     1px 1px 0 #555;
 	display: block;
 	overflow: hidden;
 }
@@ -811,9 +806,6 @@ blockquote p {
 .site-logo:hover {
 	color: #fff;
 	text-decoration: none;
-    -moz-transition:box-shadow 1s ease-in-out;
-    -webkit-transition:box-shadow 1s ease-in-out;
-    -o-transition:box-shadow 1s ease-in-out;
 }
 
 .site-logo img {
@@ -1623,7 +1615,6 @@ nav-menu
 }
 
 .top-bar ul>li a:not(.button) { font-family:"Gotham-Book", sans-serif; border-left: solid 1px #000; box-shadow: inset -1px 0px #333; }
-.top-bar li.current_page_item a{  
-	background:#A10518;
-	box-shadow: inset -1px -1px white;
-	}
+.top-bar ul>li.current_page_item a {  
+	color:#ffcc00;
+}
